--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ repository = "https://github.com/alvinhochun/conrod_floatwin"
 readme = "README.md"
 categories = ["gui", "graphics"]
 
+exclude = ["/images/"]
+
 [dependencies]
 conrod_core = ">=0.69"
 
